<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total_with_tax">Bill Total with Tax:</string>
    <string name="tip_percent">Tip Percent:</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="total_with_tip">Total with Tip:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="go">Go</string>
    <string name="total_per_person">Total Per Person:</string>
    <string name="clear">Clear</string>
    <string name="twelvePercent">12%</string>
    <string name="fifteenPercent">15%</string>
    <string name="eighteenPercent">18%</string>
    <string name="twentyPercent">20%</string>
</resources>