<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billTotalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:text="@string/bill_total_with_tax"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billTotalNumberView"
        android:layout_width="169dp"
        android:layout_height="44dp"
        android:layout_marginEnd="30dp"
        android:background="#DCFFDC"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/billTotalTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tipPercentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:text="@string/tip_percent"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billTotalTextView" />

    <TextView
        android:id="@+id/tipAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="96dp"
        android:text="@string/tip_amount"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentView" />

    <TextView
        android:id="@+id/totalwithTipView"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginStart="88dp"
        android:background="#E8E6E6"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/total_with_tip"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmountView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/number_of_people"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="82dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:width="100dp"
        android:text="@string/go"
        android:onClick="calculateTotalPerPerson"
        app:layout_constraintBaseline_toBaselineOf="@+id/NumPeopleNumber"
        app:layout_constraintStart_toEndOf="@+id/NumPeopleNumber" />

    <EditText
        android:id="@+id/NumPeopleNumber"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:width="100dp"
        android:background="#DCFFDC"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:text="@string/total_per_person"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="175dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:width="100dp"
        android:background="#E8E6E6"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="44dp"
        android:height="46dp"
        android:text="@string/clear"
        android:onClick="doClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tipAmountNumber"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginStart="104dp"
        android:background="#E8E6E6"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipAmountView"
        app:layout_constraintStart_toEndOf="@+id/tipAmountView"
        app:layout_constraintTop_toTopOf="@+id/tipAmountView"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.684" />

    <RadioGroup
        android:id="@+id/tipRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tipAmountView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentView"
        app:layout_constraintVertical_bias="0.32999998">

        <RadioButton
            android:id="@+id/tweleveRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/purple_500"
            android:text="@string/twelvePercent"
            android:onClick="doCalculate"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/fifteenRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/purple_500"
            android:text="@string/fifteenPercent"
            android:onClick="doCalculate"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/eighteenRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/purple_500"
            android:text="@string/eighteenPercent"
            android:onClick="doCalculate"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/twentyRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:text="@string/twentyPercent"
            android:onClick="doCalculate"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>